--- a/src/App.css
+++ b/src/App.css
@@ -75,8 +75,9 @@
 
 
 .login_input:focus{
-  border: 2px solid #1DB954;
+  border: 2px solid black;
   background-color: whitesmoke;
+  font-size: 16px;
 }
 
 .link_signup:hover{
@@ -91,8 +92,10 @@
 }
 
 .signup_input:focus{
-  border: 2px solid navy;
+  border: 2px solid black;
   background-color: whitesmoke;
+  font-size: 16px;
+
 }
 
 .signup_btn:hover{
